...
import com.rokoblak.gittrendingcompose.BuildConfig
import com.rokoblak.gittrendingcompose.R
import com.rokoblak.gittrendingcompose.ui.screens.reposlisting.ListingAction
import com.rokoblak.gittrendingcompose.ui.theme.GitTrendingComposeTheme
import com.rokoblak.gittrendingcompose.ui.theme.alpha

const val TAG_DRAWER = "tag-drawer"
const val TAG_SWITCH_DARK_MODE = "tag-switch-dark-mode"

data class ListingDrawerUIState(
    val darkMode: Boolean?,
)

@Composable
...
